fix: hide decorative footer logo on laptop screens to prevent overlap

--- a/public/assets/scss/footer/_footer.scss
+++ b/public/assets/scss/footer/_footer.scss
@@ -14,7 +14,7 @@
     z-index: -1;
     width: 350px;
 
-    @media (max-width: 1399px) {
+    @media (max-width: 1599px) {
       display: none;
     }
 
